k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-overview
  namespace: microservice-overview
  labels:
    app: microservice-overview
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: microservice-overview
